# cpp_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  build.bat  collisions  levelEditor.py  main.cpp  number.txt  test.txt
data/levels/: blockData.json
data/levels/lvl1/: levelConfig.json
data/levels/lvl2/: levelConfig.json
opengl_test/: CMakeLists.txt  main  main.cpp  run.bat  run.sh
opengl_test/lib/: SDL2ConfigVersion.cmake  SDL2Targets-none.cmake  SDL2_image.pc  SDL2_mixer.pc  SDL2_ttf.pc  libSDL2-2.0.so.0.3200.56  sdl2-compat.pc  sdl2.pc  sdl2_image-config.cmake  sdl2_mixer-config.cmake
opengl_test/src/: app.h  shader.cpp  shader.h  shader.hpp
opengl_test/src/shaders/: shader.frag
src/: audio.hpp  collisions.hpp  engine.hpp  fonts.hpp  gameloop.hpp  glad.c  level.hpp
